--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,5 @@ before_install:
 - docker build -t im .
 
 script:
-- docker run --rm im --help
+- docker run --rm im -help
+- docker run --rm -v $(pwd):/imgs im -resize 500 /imgs/test.jpg /imgs/test-resize.jpg
