--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,9 @@ before_install:
 
 script:
 - docker run --rm -v $(pwd):/imgs im -resize 500 /imgs/test.jpg /imgs/test-resize.jpg
-- docker run --rm -v $(pwd):/imgs im -resize 500 /imgs/test.jpg webp:/imgs/test-resize.webp
-- docker run --rm -v $(pwd):/imgs im -resize 500 /imgs/test.jpg jxr:/imgs/test-resize.jxr
-- docker run --rm -v $(pwd):/imgs im -resize 100 /imgs/test.png /imgs/test-resize.jpg
-- docker run --rm -v $(pwd):/imgs im -resize 100 /imgs/test.png webp:/imgs/test-resize.webp
-- docker run --rm -v $(pwd):/imgs im -resize 100 /imgs/test.png jxr:/imgs/test-resize.jxr
+- docker run --rm -v $(pwd):/imgs im -resize 500 /imgs/test.jpg webp:/imgs/test-jpg.webp
+- docker run --rm -v $(pwd):/imgs im -resize 500 /imgs/test.jpg jxr:/imgs/test-jpg.jxr
+- docker run --rm -v $(pwd):/imgs im -resize 100 /imgs/test.png /imgs/test-resize.png
+- docker run --rm -v $(pwd):/imgs im -resize 100 /imgs/test.png webp:/imgs/test-png.webp
+- docker run --rm -v $(pwd):/imgs im -resize 100 /imgs/test.png jxr:/imgs/test-png.jxr
 - ls -l
