Added docker build based on Debian stretch

--- a/Dockerfile.stretch
+++ b/Dockerfile.stretch
@@ -1,6 +1,7 @@
-FROM debian:stretch
+FROM debian:stretch-slim
 
 RUN apt-get -y update && \
+    apt-get -y upgrade && \
     apt-get -y install git make gcc pkg-config autoconf && \
     apt-get -y install libpng16-16 libpng-dev libjpeg62-turbo libjpeg62-turbo-dev libwebp6 libwebp-dev libgomp1 libwebpmux2 libwebpdemux2 && \
     git clone https://github.com/ImageMagick/ImageMagick.git && \
