--- a/.travis.yml
+++ b/.travis.yml
@@ -14,9 +14,11 @@ script:
 - docker run --rm -v $(pwd):/imgs im -resize 100 /imgs/test.png /imgs/test-resize.png
 - docker run --rm -v $(pwd):/imgs im -resize 100 /imgs/test.png webp:/imgs/test-png.webp
 - docker run --rm -v $(pwd):/imgs im -resize 100 /imgs/test.png jxr:/imgs/test-png.jxr
+- docker run --rm -v $(pwd):/imgs im /imgs/test.pdf /imgs/test-pdf.png
 - ls -l
 - docker run --rm -v $(pwd):/imgs im-stretch -resize 500 /imgs/test.jpg /imgs/test-resize.jpg
 - docker run --rm -v $(pwd):/imgs im-stretch -resize 500 /imgs/test.jpg webp:/imgs/test-jpg.webp
 - docker run --rm -v $(pwd):/imgs im-stretch -resize 100 /imgs/test.png /imgs/test-resize.png
 - docker run --rm -v $(pwd):/imgs im-stretch -resize 100 /imgs/test.png webp:/imgs/test-png.webp
+- docker run --rm -v $(pwd):/imgs im-stretch /imgs/test.pdf /imgs/test-pdf.png
 - ls -l
