--- a/Dockerfile.buster
+++ b/Dockerfile.buster
@@ -2,33 +2,34 @@ FROM debian:buster
 
 ARG IM_VERSION=7.0.10-25
 ARG LIB_HEIF_VERSION=1.7.0
+ARG LIB_AOM_VERSION=2.0.0
 
 RUN apt-get -y update && \
     apt-get -y upgrade && \
-    apt-get install -y git make gcc pkg-config autoconf curl g++ && \
-    # libaom-2
-    apt-get install -y yasm cmake && \
-    # LibHeif
-    apt-get install -y libde265-0 libde265-dev libjpeg62-turbo libjpeg62-turbo-dev x265 libx265-dev libtool && \
+    apt-get install -y git make gcc pkg-config autoconf curl g++ \
+    # libaom
+    yasm cmake \
+    # libheif
+    libde265-0 libde265-dev libjpeg62-turbo libjpeg62-turbo-dev x265 libx265-dev libtool \
     # IM
-    apt-get -y install libpng16-16 libpng-dev libjpeg62-turbo libjpeg62-turbo-dev libwebp6 libwebp-dev libgomp1 libwebpmux3 libwebpdemux2 ghostscript
-
-RUN git clone https://aomedia.googlesource.com/aom && \
-    cd aom && git checkout v2.0.0 && cd ..\
+    libpng16-16 libpng-dev libjpeg62-turbo libjpeg62-turbo-dev libwebp6 libwebp-dev libgomp1 libwebpmux3 libwebpdemux2 ghostscript && \
+    # Building libaom
+    git clone https://aomedia.googlesource.com/aom && \
+    cd aom && git checkout v${LIB_AOM_VERSION} && cd .. && \
     mkdir build_aom && \
     cd build_aom && \
     cmake ../aom/ -DENABLE_TESTS=0 -DBUILD_SHARED_LIBS=1 && make && make install && \
     ldconfig /usr/local/lib && \
     cd .. && \
     rm -rf aom && \
-    rm -rf aom_build
-
-RUN curl -L https://github.com/strukturag/libheif/releases/download/v${LIB_HEIF_VERSION}/libheif-${LIB_HEIF_VERSION}.tar.gz -o libheif.tar.gz && \
+    rm -rf build_aom && \
+    # Building libheif
+    curl -L https://github.com/strukturag/libheif/releases/download/v${LIB_HEIF_VERSION}/libheif-${LIB_HEIF_VERSION}.tar.gz -o libheif.tar.gz && \
     tar -xzvf libheif.tar.gz && cd libheif-${LIB_HEIF_VERSION}/ && ./autogen.sh && ./configure && make && make install && cd .. && \
     ldconfig /usr/local/lib && \
-    rm -rf libheif-${LIB_HEIF_VERSION} && rm libheif.tar.gz
-
-RUN git clone https://github.com/ImageMagick/ImageMagick.git && \
+    rm -rf libheif-${LIB_HEIF_VERSION} && rm libheif.tar.gz && \
+    # Building ImageMagick
+    git clone https://github.com/ImageMagick/ImageMagick.git && \
     cd ImageMagick && git checkout ${IM_VERSION} && \
     ./configure && make && make install && \
     ldconfig /usr/local/lib && \
