--- a/Dockerfile.buster
+++ b/Dockerfile.buster
@@ -31,10 +31,11 @@ RUN apt-get -y update && \
     # Building ImageMagick
     git clone https://github.com/ImageMagick/ImageMagick.git && \
     cd ImageMagick && git checkout ${IM_VERSION} && \
-    ./configure && make && make install && \
+    ./configure --without-magick-plus-plus --disable-docs --disable-static && \
+    make && make install && \
     ldconfig /usr/local/lib && \
-    apt-get remove --autoremove --purge -y gcc make cmake yasm git autoconf pkg-config libpng-dev libjpeg62-turbo-dev libwebp-dev libde265-dev libx265-dev && \
+    apt-get remove --autoremove --purge -y gcc make cmake curl g++ yasm git autoconf pkg-config libpng-dev libjpeg62-turbo-dev libwebp-dev libde265-dev libx265-dev && \
     rm -rf /var/lib/apt/lists/* && \
     rm -rf /ImageMagick
 
-
+ENTRYPOINT ["convert"]
