--- a/Dockerfile.stretch
+++ b/Dockerfile.stretch
@@ -5,7 +5,7 @@ ARG IM_VERSION=7.0.10-45
 RUN apt-get -y update && \
     apt-get -y upgrade && \
     apt-get -y install git make gcc pkg-config autoconf && \
-    apt-get -y install libpng16-16 libpng-dev libjpeg62-turbo libjpeg62-turbo-dev libwebp6 libwebp-dev libgomp1 libwebpmux2 libwebpdemux2 ghostscript && \
+    apt-get -y install libpng16-16 libpng-dev libjpeg62-turbo libjpeg62-turbo-dev libwebp6 libwebp-dev libgomp1 libwebpmux2 libwebpdemux2 ghostscript libxml2-dev libxml2-utils && \
     git clone https://github.com/ImageMagick/ImageMagick.git && \
     cd ImageMagick && git checkout ${IM_VERSION} && \
     ./configure && make && make install && \
