--- a/Dockerfile.stretch
+++ b/Dockerfile.stretch
@@ -10,7 +10,7 @@ RUN apt-get -y update && \
     cd ImageMagick && git checkout ${IM_VERSION} && \
     ./configure && make && make install && \
     ldconfig /usr/local/lib && \
-    apt-get remove --autoremove --purge -y gcc make git autoconf pkg-config libpng-dev libjpeg62-turbo-dev libwebp-dev && \
+    apt-get remove --autoremove --purge -y gcc make git autoconf pkg-config libpng-dev libjpeg62-turbo-dev libwebp-dev libxml2-dev && \
     rm -rf /var/lib/apt/lists/* && \
     rm -rf /ImageMagick
 
