--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -15,13 +15,14 @@ jobs:
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
       -
-        name: Build and push
+        name: Build Fedora image
         id: docker_build
         uses: docker/build-push-action@v2
         with:
           context: .
           file: ./Dockerfile.fedora27
           push: false
+          load: true
           tags: im-fedora27
       -
         name: Testing Fedora image
