--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -66,7 +66,7 @@ jobs:
           docker run --rm -v $(pwd):/imgs im-stretch /imgs/test.pdf /imgs/test-pdf.png
           docker run --rm -v $(pwd):/imgs im-stretch /imgs/jpg-with-metadata.jpg /imgs/jpg-with-metadata.webp
       -
-        name: Build Debian Stretch Image
+        name: Build Debian Buster Image
         id: docker_build_buster
         uses: docker/build-push-action@v2
         with:
@@ -78,7 +78,7 @@ jobs:
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache
       -
-        name: Testing Debian Stretch Image
+        name: Testing Debian Buster Image
         run: |
           docker run --rm -v $(pwd):/imgs im-buster -resize 500 /imgs/test.jpg /imgs/test-resize.jpg
           docker run --rm -v $(pwd):/imgs im-buster -resize 500 /imgs/test.jpg webp:/imgs/test-jpg.webp
