--- a/Dockerfile.buster
+++ b/Dockerfile.buster
@@ -24,6 +24,9 @@ RUN apt-get -y update && \
     cmake -DCMAKE_BUILD_TYPE=Release -DBUILD_TESTING=OFF .. && \
     cmake --build . -- -j$(nproc) && \
     cmake --install . && \
+    cd lib && make install && \
+    ldconfig /usr/local/lib && \
+    cd ../../../ && \
     # Building libaom
     git clone https://aomedia.googlesource.com/aom && \
     cd aom && git checkout v${LIB_AOM_VERSION} && cd .. && \
@@ -42,12 +45,14 @@ RUN apt-get -y update && \
     # Building ImageMagick
     git clone https://github.com/ImageMagick/ImageMagick.git && \
     cd ImageMagick && git checkout ${IM_VERSION} && \
-    ./configure --without-magick-plus-plus --disable-docs --disable-static && \
+    LIBS="-ljxl_threads" ./configure --without-magick-plus-plus --disable-docs --disable-static --with-jxl && \
     make && make install && \
     ldconfig /usr/local/lib && \
+    # Cleanup
     apt-get remove --autoremove --purge -y gcc clang-7 make cmake curl g++ yasm git autoconf pkg-config libpng-dev libjpeg62-turbo-dev libwebp-dev libde265-dev libx265-dev libxml2-dev libbrotli-dev && \
     rm -rf /var/lib/apt/lists/* && \
     rm -rf /ImageMagick && \
+    # Smoke test
     convert -list format
 
 ENTRYPOINT ["convert"]
