--- a/Dockerfile.buster
+++ b/Dockerfile.buster
@@ -3,6 +3,7 @@ FROM debian:buster-slim
 ARG IM_VERSION=7.0.11-6
 ARG LIB_HEIF_VERSION=1.11.0
 ARG LIB_AOM_VERSION=3.0.0
+ARG LIB_WEBP_VERSION=1.2.0
 
 RUN apt-get -y update && \
     apt-get -y upgrade && \
@@ -12,7 +13,14 @@ RUN apt-get -y update && \
     # libheif
     libde265-0 libde265-dev libjpeg62-turbo libjpeg62-turbo-dev x265 libx265-dev libtool \
     # IM
-    libpng16-16 libpng-dev libjpeg62-turbo libjpeg62-turbo-dev libwebp6 libwebp-dev libgomp1 libwebpmux3 libwebpdemux2 ghostscript libxml2-dev libxml2-utils && \
+    libpng16-16 libpng-dev libjpeg62-turbo libjpeg62-turbo-dev libgomp1 ghostscript libxml2-dev libxml2-utils && \
+    # Building libwebp
+    git clone https://chromium.googlesource.com/webm/libwebp && \
+    cd libwebp && git checkout v${LIB_WEBP_VERSION} && \
+    ./autogen.sh && ./configure --enable-shared --enable-libwebpdecoder --enable-libwebpdemux --enable-libwebpmux --enable-static=no && \
+    make && make install && \
+    ldconfig /usr/local/lib && \
+    cd ../ && rm -rf libwebp && \
     # Building libaom
     git clone https://aomedia.googlesource.com/aom && \
     cd aom && git checkout v${LIB_AOM_VERSION} && cd .. && \
@@ -34,7 +42,7 @@ RUN apt-get -y update && \
     ./configure --without-magick-plus-plus --disable-docs --disable-static && \
     make && make install && \
     ldconfig /usr/local/lib && \
-    apt-get remove --autoremove --purge -y gcc make cmake curl g++ yasm git autoconf pkg-config libpng-dev libjpeg62-turbo-dev libwebp-dev libde265-dev libx265-dev libxml2-dev && \
+    apt-get remove --autoremove --purge -y gcc make cmake curl g++ yasm git autoconf pkg-config libpng-dev libjpeg62-turbo-dev libde265-dev libx265-dev libxml2-dev && \
     rm -rf /var/lib/apt/lists/* && \
     rm -rf /ImageMagick
 
