--- a/Dockerfile.buster
+++ b/Dockerfile.buster
@@ -1,8 +1,8 @@
 FROM debian:buster-slim
 
-ARG IM_VERSION=7.0.11-6
-ARG LIB_HEIF_VERSION=1.11.0
-ARG LIB_AOM_VERSION=3.0.0
+ARG IM_VERSION=7.0.11-10
+ARG LIB_HEIF_VERSION=1.12.0
+ARG LIB_AOM_VERSION=3.1.0
 ARG LIB_WEBP_VERSION=1.2.0
 
 RUN apt-get -y update && \
@@ -13,7 +13,7 @@ RUN apt-get -y update && \
     # libheif
     libde265-0 libde265-dev libjpeg62-turbo libjpeg62-turbo-dev x265 libx265-dev libtool \
     # IM
-    libpng16-16 libpng-dev libjpeg62-turbo libjpeg62-turbo-dev libgomp1 ghostscript libxml2-dev libxml2-utils && \
+    libpng16-16 libpng-dev libjpeg62-turbo libjpeg62-turbo-dev libgomp1 ghostscript libxml2-dev libxml2-utils libtiff-dev && \
     # Building libwebp
     git clone https://chromium.googlesource.com/webm/libwebp && \
     cd libwebp && git checkout v${LIB_WEBP_VERSION} && \
@@ -39,10 +39,10 @@ RUN apt-get -y update && \
     # Building ImageMagick
     git clone https://github.com/ImageMagick/ImageMagick.git && \
     cd ImageMagick && git checkout ${IM_VERSION} && \
-    ./configure --without-magick-plus-plus --disable-docs --disable-static && \
+    ./configure --without-magick-plus-plus --disable-docs --disable-static --with-libtiff && \
     make && make install && \
     ldconfig /usr/local/lib && \
-    apt-get remove --autoremove --purge -y gcc make cmake curl g++ yasm git autoconf pkg-config libpng-dev libjpeg62-turbo-dev libde265-dev libx265-dev libxml2-dev && \
+    apt-get remove --autoremove --purge -y gcc make cmake curl g++ yasm git autoconf pkg-config libpng-dev libjpeg62-turbo-dev libde265-dev libx265-dev libxml2-dev libtiff-dev && \
     rm -rf /var/lib/apt/lists/* && \
     rm -rf /ImageMagick
 
