Added fontconfig and freetype support
Before this commit, when running convert commands overalying text on an image,
ImageMagick would output the following warning:
```
convert: delegate library support not built-in '...' (Freetype) @ warning/annotate.c/RenderFreetype/1873
```

Even though text would render on the output image, the text looked pixelated.
Adding fontconfig and freetype to ImageMagick fixes this.

See the following links for more info:
https://web.archive.org/web/20210621064448/https://legacy.imagemagick.org/discourse-server/viewtopic.php?t=21070

The following is a comparison of the output from the existing
dpokidov/imagemagick Docker images and images built from this commit:

OUTPUT FROM EXISTING dpokidov/imagemagick DOCKER IMAGES:
```
$ docker run -it --rm dpokidov/imagemagick:latest -version
Version: ImageMagick 7.0.11-13 Q16 x86_64 2021-05-16 https://imagemagick.org
Copyright: (C) 1999-2021 ImageMagick Studio LLC
License: https://imagemagick.org/script/license.php
Features: Cipher DPC HDRI OpenMP(4.5)
Delegates (built-in): heic jbig jng jpeg lzma png tiff webp xml zlib

$ docker run --rm -v $(pwd):/imgs dpokidov/imagemagick:latest /imgs/test.jpg -antialias -font Helvetica-Bold -pointsize 20 -gravity Southeast -annotate +15+15 'TEST' /imgs/test-text.jpg
convert: delegate library support not built-in '/usr/share/fonts/type1/gsfonts/n019004l.pfb' (Freetype) @ warning/annotate.c/RenderFreetype/1873.
convert: delegate library support not built-in '/usr/share/fonts/type1/gsfonts/n019004l.pfb' (Freetype) @ warning/annotate.c/RenderFreetype/1873.

$ docker run -it --rm dpokidov/imagemagick:latest-stretch -version
Version: ImageMagick 7.0.11-13 Q16 x86_64 2021-05-16 https://imagemagick.org
Copyright: (C) 1999-2021 ImageMagick Studio LLC
License: https://imagemagick.org/script/license.php
Features: Cipher DPC HDRI OpenMP(4.5)
Delegates (built-in): jng jpeg png webp xml zlib

$ $ docker run --rm -v $(pwd):/imgs dpokidov/imagemagick:latest-stretch /imgs/test

--- a/Dockerfile.fedora27
+++ b/Dockerfile.fedora27
@@ -7,13 +7,13 @@ RUN dnf -y install https://download1.rpmfusion.org/free/fedora/rpmfusion-free-re
 
 WORKDIR /opt
 
-RUN yum install -y libtool-ltdl libjpeg libjpeg-devel libpng libpng-devel libtiff libtiff-devel libwebp libwebp-devel LibRaw LibRaw-devel jxrlib git make automake gcc pkgconf ghostscript-core libxml2-devel && \
+RUN yum install -y libtool-ltdl libjpeg libjpeg-devel libpng libpng-devel libtiff libtiff-devel libwebp libwebp-devel LibRaw LibRaw-devel jxrlib git make automake gcc pkgconf ghostscript-core libxml2-devel fontconfig-devel freetype-devel && \
     git clone https://github.com/ImageMagick/ImageMagick.git && \
     cd ImageMagick && git checkout ${IM_VERSION} && \
     ./configure && make && make install && \
     cd ../ && \
     rm -rf ./ImageMagick && \
-    yum remove -y git make automake gcc libjpeg-devel libpng-devel libtiff-devel libwebp-devel LibRaw-devel && \
+    yum remove -y git make automake gcc libjpeg-devel libpng-devel libtiff-devel libwebp-devel LibRaw-devel fontconfig-devel freetype-devel && \
     yum clean all
 
 ENTRYPOINT ["convert"]
