--- a/Dockerfile.stretch
+++ b/Dockerfile.stretch
@@ -5,12 +5,12 @@ ARG IM_VERSION=7.0.11-13
 RUN apt-get -y update && \
     apt-get -y upgrade && \
     apt-get -y install git make gcc pkg-config autoconf && \
-    apt-get -y install libpng16-16 libpng-dev libjpeg62-turbo libjpeg62-turbo-dev libwebp6 libwebp-dev libgomp1 libwebpmux2 libwebpdemux2 ghostscript libxml2-dev libxml2-utils libtiff-dev && \
+    apt-get -y install libpng16-16 libpng-dev libjpeg62-turbo libjpeg62-turbo-dev libwebp6 libwebp-dev libgomp1 libwebpmux2 libwebpdemux2 ghostscript libxml2-dev libxml2-utils libtiff-dev libfontconfig1-dev libfreetype6-dev && \
     git clone https://github.com/ImageMagick/ImageMagick.git && \
     cd ImageMagick && git checkout ${IM_VERSION} && \
     ./configure && make && make install && \
     ldconfig /usr/local/lib && \
-    apt-get remove --autoremove --purge -y gcc make git autoconf pkg-config libpng-dev libjpeg62-turbo-dev libwebp-dev libxml2-dev libtiff-dev && \
+    apt-get remove --autoremove --purge -y gcc make git autoconf pkg-config libpng-dev libjpeg62-turbo-dev libwebp-dev libxml2-dev libtiff-dev libfontconfig1-dev libfreetype6-dev && \
     rm -rf /var/lib/apt/lists/* && \
     rm -rf /ImageMagick
 
