Added TIFF support to Dockerfile.stretch
Also, Dockerfile.fedora27 already supported TIFF as evidenced by the following
command:
```
$ docker run -it --rm dpokidov/imagemagick:latest-fedora27 -version
Version: ImageMagick 7.0.11-13 Q16 x86_64 2021-05-16 https://imagemagick.org
Copyright: (C) 1999-2021 ImageMagick Studio LLC
License: https://imagemagick.org/script/license.php
Features: Cipher DPC HDRI OpenMP(4.5)
Delegates (built-in): jng jpeg lcms lzma png raw tiff webp xml zlib
```

--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -44,6 +44,8 @@ jobs:
           docker run --rm -v $(pwd):/imgs im-fedora27 -resize 100 /imgs/test.png webp:/imgs/test-png.webp
           docker run --rm -v $(pwd):/imgs im-fedora27 -resize 100 /imgs/test.png jxr:/imgs/test-png.jxr
           docker run --rm -v $(pwd):/imgs im-fedora27 /imgs/test.pdf /imgs/test-pdf.png
+          docker run --rm -v $(pwd):/imgs im-fedora27 -resize 200 /imgs/test.tiff /imgs/test-resize.tiff
+          docker run --rm -v $(pwd):/imgs im-fedora27 -resize 200 /imgs/test.tiff webp:/imgs/test-tiff.webp
       -
         name: Build Debian Stretch Image
         id: docker_build_stretch
@@ -65,6 +67,8 @@ jobs:
           docker run --rm -v $(pwd):/imgs im-stretch -resize 100 /imgs/test.png webp:/imgs/test-png.webp
           docker run --rm -v $(pwd):/imgs im-stretch /imgs/test.pdf /imgs/test-pdf.png
           docker run --rm -v $(pwd):/imgs im-stretch /imgs/jpg-with-metadata.jpg /imgs/jpg-with-metadata.webp
+          docker run --rm -v $(pwd):/imgs im-stretch -resize 200 /imgs/test.tiff /imgs/test-resize.tiff
+          docker run --rm -v $(pwd):/imgs im-stretch -resize 200 /imgs/test.tiff webp:/imgs/test-tiff.webp
       -
         name: Build Debian Stretch Image
         id: docker_build_buster
