--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -72,7 +72,7 @@ jobs:
           docker run --rm -v $(pwd):/imgs im-stretch -resize 200 /imgs/test.tiff webp:/imgs/test-tiff.webp
           docker run --rm -v $(pwd):/imgs im-stretch /imgs/test.jpg -antialias -font Helvetica-Bold -pointsize 20 -gravity Southeast -annotate +15+15 'TEST' /imgs/test-text.jpg
       -
-        name: Build Debian Stretch Image
+        name: Build Debian Buster Image
         id: docker_build_buster
         uses: docker/build-push-action@v2
         with:
