--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -14,6 +14,11 @@ jobs:
       -
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
       -
         name: Cache Docker layers
         uses: actions/cache@v2
@@ -47,6 +52,18 @@ jobs:
           docker run --rm -v $(pwd):/imgs im-fedora27 -resize 200 /imgs/test.tiff /imgs/test-resize.tiff
           docker run --rm -v $(pwd):/imgs im-fedora27 -resize 200 /imgs/test.tiff webp:/imgs/test-tiff.webp
           docker run --rm -v $(pwd):/imgs im-fedora27 /imgs/test.jpg -antialias -font NimbusRoman-Bold -pointsize 20 -gravity Southeast -annotate +15+15 'TEST' /imgs/test-text.jpg
+      -
+        name: Push Fedora image
+        id: docker_push_fedora
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          file: ./Dockerfile.fedora27
+          push: ${{ github.event_name == 'release' }}
+          load: true
+          tags: ${{ github.event.tag_name }}-fedora27,latest-fedora27
+          cache-from: type=local,src=/tmp/.buildx-cache
+          cache-to: type=local,dest=/tmp/.buildx-cache
       -
         name: Build Debian Stretch Image
         id: docker_build_stretch
