--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -55,11 +55,12 @@ jobs:
       -
         name: Push Fedora image
         id: docker_push_fedora
+        if: ${{ github.event_name == 'release' }}
         uses: docker/build-push-action@v2
         with:
           context: .
           file: ./Dockerfile.fedora27
-          push: ${{ github.event_name == 'release' }}
+          push: true
           load: true
           tags: ${{ github.event.tag_name }}-fedora27,latest-fedora27
           cache-from: type=local,src=/tmp/.buildx-cache
