Pushing the docker image on release

--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -1,6 +1,12 @@
 name: ci
 
-on: [push,release]
+on:
+  push:
+    tags-ignore:
+      - *
+  release:
+    types:
+      - published
 
 jobs:
   main:
