Pushing the docker image on release

--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -69,7 +69,7 @@ jobs:
           context: .
           file: ./Dockerfile.fedora27
           push: true
-          load: true
+          load: false
           tags: ${{ github.event.tag_name }}-fedora27,latest-fedora27
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache
