--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -70,7 +70,7 @@ jobs:
           file: ./Dockerfile.fedora27
           push: true
           load: false
-          tags: ${{ env.GITHUB_REF }}-fedora27,latest-fedora27
+          tags: ${{ github.ref }}-fedora27,latest-fedora27
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache
 #      -
