--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -17,16 +17,8 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
       -
-        name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
-      -
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
-      - name: Login to DockerHub
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
       -
         name: Cache Docker layers
         uses: actions/cache@v2
@@ -60,17 +52,23 @@ jobs:
           docker run --rm -v $(pwd):/imgs im-fedora27 -resize 200 /imgs/test.tiff /imgs/test-resize.tiff
           docker run --rm -v $(pwd):/imgs im-fedora27 -resize 200 /imgs/test.tiff webp:/imgs/test-tiff.webp
           docker run --rm -v $(pwd):/imgs im-fedora27 /imgs/test.jpg -antialias -font NimbusRoman-Bold -pointsize 20 -gravity Southeast -annotate +15+15 'TEST' /imgs/test-text.jpg
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
       -
         name: Push Fedora image
         id: docker_push_fedora
-        if: ${{ github.event_name == 'release' }}
+#        if: ${{ github.event_name == 'release' }}
         uses: docker/build-push-action@v2
         with:
           context: .
           file: ./Dockerfile.fedora27
           push: true
           load: false
-          tags: ${{ github.ref }}-fedora27,latest-fedora27
+#          tags: ${{ github.ref }}-fedora27,latest-fedora27
+          tags: test-gh-push
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache
 #      -
