Fixed the docker tag name

--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -142,6 +142,6 @@ jobs:
           file: ./Dockerfile.buster
           push: true
           load: false
-          tags: dpokidov/imagemagick:${{ github.event.release.tag_name }}-buster,dpokidov/imagemagick:latest-buster,dpokidov/imagemagick:latest
+          tags: dpokidov/imagemagick:${{ github.event.release.tag_name }},dpokidov/imagemagick:${{ github.event.release.tag_name }}-buster,dpokidov/imagemagick:latest-buster,dpokidov/imagemagick:latest
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache
