--- a/Dockerfile.buster
+++ b/Dockerfile.buster
@@ -1,6 +1,8 @@
 FROM debian:buster-slim
 
-ARG IM_VERSION=7.1.0-10
+ENV DEBIAN_FRONTEND=noninteractive
+
+ARG IM_VERSION=7.1.0-14
 ARG LIB_HEIF_VERSION=1.12.0
 ARG LIB_AOM_VERSION=3.2.0
 ARG LIB_WEBP_VERSION=1.2.1
