--- a/Dockerfile.fedora27
+++ b/Dockerfile.fedora27
@@ -9,13 +9,8 @@ WORKDIR /opt
 
 RUN yum install -y libtool-ltdl libjpeg libjpeg-devel libpng libpng-devel libtiff libtiff-devel libwebp libwebp-devel LibRaw LibRaw-devel jxrlib git make automake gcc pkgconf ghostscript-core libxml2-devel fontconfig-devel freetype-devel && \
     git clone https://github.com/ImageMagick/ImageMagick.git && \
-    cd ImageMagick
-
-WORKDIR /opt/ImageMagick
-
-RUN git checkout ${IM_VERSION}
-RUN ./configure
-RUN make && make install && \
+    cd ImageMagick && git checkout ${IM_VERSION} && \
+    ./configure && make && make install && \
     cd ../ && \
     rm -rf ./ImageMagick && \
     yum remove -y git make automake gcc libjpeg-devel libpng-devel libtiff-devel libwebp-devel LibRaw-devel fontconfig-devel freetype-devel && \
